--- a/APIweather/style.css
+++ b/APIweather/style.css
@@ -12,7 +12,7 @@
   img.background {
     position: absolute; 
     z-index: -1;
-    filter: blur(3px);
+    /* filter: blur(3px); */
   }
 
   body{
@@ -24,15 +24,17 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #130f40;
-    /* background-image: url("./weather_background.jpg"); */
-  
+   
+    background-image: url("./weather_background.jpg");
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.45);
   }
 /* location */
 .locatBox{
 height: 140px;
-width: 100%;
-
+width: 80%;
+border-radius: 10px;
+margin-top: 10px;
+color:#ffffffba
 
 }
 
@@ -77,7 +79,7 @@ text-align: center;
     width: 100%;
     display: flex;
     justify-content: center;
-    z-index: -1;
+    z-index: 1000;
     margin-bottom: 20px;
   }
   div#icon{
@@ -123,6 +125,7 @@ text-align: center;
     width: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 
